--- a/style.css
+++ b/style.css
@@ -50,35 +50,41 @@ a {
   margin: 30px 0;
 }
 
+.navbar-center,
 .hero-btns,
 .item-btns,
 .categories,
-.copyrights,
 .more-container,
-.subscribe-container,
+.subscribe-column,
 .posts,
 .news-cards,
-.review-btns {
-  padding: 0 100px;
-}
+.review-btns,
+.subscribe-center,
+.reviews,
 .items,
-.reviews {
-  padding: 0 200px;
+.card-position,
+.copyrights-position {
+  max-width: 1120px;
+  width: 90vw;
 }
 
 /* navbar */
 .navbar {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
   color: var(--clr-2);
   background: var(--clr-4);
   position: relative;
-  padding: 10px 100px;
+  justify-content: center;
 }
 
+.navbar-center {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 .nav-links {
   display: flex;
+  width: 100%;
 }
 
 .nav-link {
@@ -92,13 +98,16 @@ a {
 .nav-logo {
   font-family: "Playfair Display", serif;
   font-size: 2rem;
+  width: 100%;
+  text-align: center;
 }
 
 .nav-icons {
-  /* margin: 10px; */
   gap: 20px;
   display: flex;
   align-items: center;
+  width: 100%;
+  justify-content: flex-end;
 }
 .nav-icon > img {
   height: 20px;
@@ -115,7 +124,6 @@ a {
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
-  width: 100%;
   justify-content: space-between;
 }
 
@@ -159,18 +167,16 @@ a {
   height: 100vh;
   margin-top: -64.44px;
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
   color: var(--clr-white);
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(images/ksenia-kazak-CK3gxJe3AzY-unsplash.jpg) center/cover;
+  justify-content: center;
 }
 
 .card-position {
-  position: absolute;
-  left: 40%;
-  margin-right: 190px;
+  padding: 90px;
 }
 
 .card-position > h1 {
@@ -228,7 +234,6 @@ a {
 .items {
   display: flex;
   position: relative;
-  width: 100%;
   justify-content: space-between;
 }
 .item {
@@ -262,7 +267,6 @@ a {
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
-  width: 100%;
   justify-content: space-between;
 }
 .item-btn {
@@ -291,7 +295,6 @@ a {
 }
 .categories {
   display: flex;
-  width: 100%;
   position: relative;
 }
 .category {
@@ -390,7 +393,6 @@ a {
   gap: 20px;
   margin-bottom: 20px;
   justify-content: space-between;
-  width: 100%;
 }
 .review {
   display: grid;
@@ -425,7 +427,6 @@ a {
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
-  width: 100%;
   justify-content: space-between;
 }
 .review-btn {
@@ -468,7 +469,6 @@ a {
 .news-cards {
   display: flex;
   gap: 10px;
-  width: 100%;
   justify-content: space-between;
 }
 .news-card {
@@ -527,7 +527,6 @@ footer > a {
   justify-content: space-between;
   gap: 10px;
   margin-bottom: 40px;
-  width: 100%;
 }
 .post {
   height: 300px;
@@ -537,7 +536,7 @@ footer > a {
   object-fit: cover;
 }
 
-.subscribe-container {
+.subscribe {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(images/contact.jpg) center/cover;
   width: 100%;
@@ -545,13 +544,15 @@ footer > a {
   color: var(--clr-4);
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  gap: 30px;
+  justify-content: center;
+}
+.subscribe-center {
+  display: flex;
+  align-items: center;
 }
 .subscribe-column {
   display: grid;
   gap: 20px;
-  width: 300px;
 }
 .subscribe-column > h3 {
   font-family: var(--fnt-2);
@@ -561,8 +562,7 @@ footer > a {
   font-size: 0.75rem;
 }
 .email {
-  min-width: 200px;
-  width: 600px;
+  width: 100%;
   height: 2.5rem;
   border: none;
   border-radius: 5px;
@@ -578,10 +578,10 @@ footer > a {
   font-family: "Work Sans", sans-serif;
   font-weight: 600;
   font-size: 1rem;
+  margin-left: 30px;
 }
 
 .more-container {
-  width: 100%;
   display: flex;
   justify-content: space-between;
   gap: 40px;
@@ -626,12 +626,50 @@ footer > a {
   width: 100%;
   background: #666666;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   color: var(--clr-4);
 }
-.copyrights > h3 {
+.copyrights-position {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.copyrights-position > h3 {
   font-family: var(--fnt-1);
   font-weight: 400;
   text-transform: uppercase;
+}
+/* for mobile */
+@media screen and (max-width: 992px) {
+  .navbar-center {
+    display: flex;
+  }
+  .nav-links {
+    display: none;
+  }
+  .nav-logo {
+    text-align: left;
+  }
+  .nav-btn > img {
+    height: 30px;
+    width: 30px;
+    margin-left: 30px;
+  }
+  .posts {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .subscribe-center {
+    display: grid;
+    justify-content: center;
+    gap: 20px;
+    justify-items: center;
+  }
+  .more-container {
+    display: grid;
+  }
+  .subscribe-column {
+    justify-items: center;
+  }
 }
