--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ a {
 
 .card-one {
   height: 100vh;
-  margin-top: -64.44px;
+  margin-top: -42.22px;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -176,7 +176,7 @@ a {
 }
 
 .card-position {
-  padding: 90px;
+  padding: 0 90px;
 }
 
 .card-position > h1 {
@@ -235,6 +235,8 @@ a {
   display: flex;
   position: relative;
   justify-content: space-between;
+  padding: 0 90px;
+  width: 100%;
 }
 .item {
   display: flex;
@@ -244,11 +246,13 @@ a {
   text-transform: capitalize;
   gap: 10px;
   margin-bottom: 20px;
+  width: 100%;
 }
 .item > img {
-  height: 250px;
+  height: 200px;
   width: 100%;
   margin: 8px 0;
+  object-fit: contain;
 }
 .item > h5 {
   font-size: 0.75rem;
@@ -318,6 +322,9 @@ a {
 #kids {
   background: url(images/kids.jpg) center/cover;
 }
+.category:hover {
+  background: #666666;
+}
 
 /* about */
 .about {
@@ -354,7 +361,8 @@ a {
   color: var(--clr-2);
   text-align: center;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  width: 600px;
+  max-width: 600px;
+  min-width: 200px;
   padding: 30px 60px;
   margin-top: -80px;
 }
@@ -393,12 +401,13 @@ a {
   gap: 20px;
   margin-bottom: 20px;
   justify-content: space-between;
+  padding: 0 90px;
 }
 .review {
   display: grid;
   gap: 10px;
   width: 100%;
-  padding: 40px;
+  padding: 30px;
   background: var(--clr-3);
   font-family: var(--fnt-1);
   text-transform: capitalize;
@@ -642,11 +651,42 @@ footer > a {
 }
 /* for mobile */
 @media screen and (max-width: 992px) {
+  body {
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll;
+  }
+  body::-webkit-scrollbar {
+    display: none;
+  }
+  .navbar {
+    display: grid;
+    position: relative;
+  }
   .navbar-center {
     display: flex;
   }
   .nav-links {
     display: none;
+  }
+  .sidebar {
+    display: none;
+    height: 0;
+    background: var(--clr-4);
+    justify-items: center;
+    align-items: center;
+    position: relative;
+    z-index: 2;
+    font-size: 3rem;
+  }
+  .show {
+    display: grid;
+    height: 95vh;
+  }
+  .nav-container {
+    background: var(--clr-4);
+    height: 100vh;
+    width: 100vw;
   }
   .nav-logo {
     text-align: left;
@@ -655,6 +695,9 @@ footer > a {
     height: 30px;
     width: 30px;
     margin-left: 30px;
+  }
+  .reviews {
+    display: grid;
   }
   .posts {
     display: grid;
@@ -668,8 +711,18 @@ footer > a {
   }
   .more-container {
     display: grid;
+    gap: 20px;
+    margin: 20px 0;
   }
   .subscribe-column {
+    justify-items: center;
+  }
+  .copyrights {
+    justify-content: center;
+  }
+  .copyrights-position {
+    display: grid;
+    justify-content: center;
     justify-items: center;
   }
 }
