--- a/style.css
+++ b/style.css
@@ -82,6 +82,9 @@ a {
   align-items: center;
   justify-content: space-between;
 }
+.sidebar {
+  display: none;
+}
 .nav-links {
   display: flex;
   width: 100%;
